--- a/ss_income_dist.html
+++ b/ss_income_dist.html
@@ -106,7 +106,7 @@
   <div class="container-fluid">
 
     <div>
-
+      <img src="Saint_Cropped_Logo_No Background.png">
       <h1 class="bodyDiv titleText">SAINT & SPIRE<br> Income Distribution Tool</h1>
 
       <div class="row">
